<resources>
    <!-- Login constants -->

    <string name="app_name">Acheron Passenger</string>
    <string name="btn_go_to_main_activity">Ir a main activity</string>
    <string name="sign_out">Sign Out</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_in">Signed in</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="account_list">Your accounts list</string>

    <!-- /Login constants -->

    <!-- Account List Items constants -->

    <string name="account_alias">Alias</string>
    <string name="account_url">URL</string>
    <string name="account_login">Login</string>
    <string name="account_email">Email</string>
    <string name="account_category">Category</string>
    <string name="account_owner">Owner</string>
    <string name="account_owner_account">Owner account</string>
    <string name="account_password">Password</string>
    <string name="reenter_password">Reenter password</string>
    <string name="account_status">Status</string>
    <string name="account_tags">Tags</string>
    <string name="account_additional_data">Additional Data</string>
    <string name="account_coowners">Coowners</string>

    <string name="a_d_account_title">Account: %s</string>
    <string name="press_to_reveal">Press to reveal password</string>

    <string name="_view_or_edit">View or edit details</string>
    <!-- /Account List Items constants -->
    <!-- Menu constants -->

    <string name="action_refresh">Reload</string>
    <string name="action_new">Add New</string>
    <string name="action_settings">Settings</string>
    <string name="button_save_account">Save!</string>

    <!--/menu constants-->

</resources>
